# image-socket

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: ci-protobuf.yml  ci.yml
apps/client/: CMakeLists.txt  example_client.cpp
apps/proto/: control.proto
apps/server/: CMakeLists.txt  liveimageprovider.cpp  liveimageprovider.h  main.cpp  main.qml  qml.qrc  videoreader.cpp  videoreader.h
apps/server/include/: diagnosticsmanager.h  diagnosticsmodel.h
apps/server/qml/: ClientsPanel.qml  ControlPanel.qml  DiagnosticsPanel.qml  EventMessages.qml  InfoOverlay.qml  StatusBar.qml  StyledButton.qml  Theme.qml  ToastNotification.qml  VideoDisplayArea.qml  qmldir
apps/server/src/: diagnosticsmanager.cpp  diagnosticsmodel.cpp
client-sender/: CMakeLists.txt  README.MD  imageSocketClient.cpp  imageSocketClient.h  test.cpp
docs/: ARCHITECTURE.md  DECISIONS.md  QUICKSTART.md  README.md  protobuf_control_protocol.md  protobuf_installation.md  testing_infrastructure_qt_backend.md  testing_infrastructure_qt_qml.md  testing_infrastructure_std.md
scripts/: run_integration_test.sh
server-receiver/: imageSocketServer.h  main.cpp  main.qml  qml.qrc  server-receiver.pro
src/: CMakeLists.txt
src/imagesocket/: imageSocketServer.cpp
src/network/: clientmodel.cpp  clientmodel.h  clientsession.cpp  clientsession.h  config.h  eventcodes.h  imageserverbridge.cpp  imageserverbridge.h  qmlimageprovider.cpp  qmlimageprovider.h  websocketimageclient.cpp  websocketimageclient.h  websocketserver.cpp  websocketserver.h
tests/: CMakeLists.txt  README.md
tests/qml/: CMakeLists.txt
tests/qml/components/: CMakeLists.txt  README.md  test_qml_component_state.cpp
tests/qml/fixtures/: AnimationHelper.qml  ComponentLoader.qml  MockBackend.qml  README.md  SignalRecorder.qml  TestRoot.qml  qmldir  test_button_state.qml  test_infooverlay_state.qml  test_mockbackend.qml  test_responsive_binding.qml  test_statusbar_state.qml  test_theme_mode.qml
tests/qml/integration/: CMakeLists.txt  README.md  test_qml_integration.cpp
tests/qml/integration/fixtures/: test_client_selection_integration.qml  test_error_handling_integration.qml  test_multi_state_coordination.qml  test_running_state_integration.qml  test_signal_chain_integration.qml  test_theme_integration.qml
tests/qml/smoke/: CMakeLists.txt  README.md  test_qml_smoke.cpp
tests/qt/: CMakeLists.txt
tests/qt/fixtures/: README.md  qt_test_base.h  test_model_helper.h  test_signal_helper.h  test_websocket_client.h  test_websocket_environment.cpp  test_websocket_environment.h  test_websocket_server.h
tests/qt/models/: README.md  test_client_model_rows.cpp  test_model_role_data.cpp
tests/qt/signals/: README.md  test_client_signals.cpp  test_fps_signals.cpp  test_status_message_signal.cpp
tests/qt/smoke/: README.md  test_component_instantiation.cpp  test_dependencies.cpp
tests/qt/state/: README.md  test_connection_state_transitions.cpp  test_server_bridge_initial_state.cpp  test_server_start_stop_transitions.cpp
tests/qt/websocket/: README.md  test_websocket_frame_integrity.cpp  test_websocket_messages.cpp  test_websocket_multiple_clients.cpp  test_websocket_robustness.cpp  test_websocket_server_accept.cpp
tests/server/: test_client_signals.cpp  test_configuredfps.cpp  test_infooverlay.cpp  test_measuredfps.cpp  test_reapplyfps.cpp  test_state_transitions.cpp  test_toast.cpp  test_toast_integration.cpp  toast_connector.qml
tests/unit/: CMakeLists.txt  README.md
tests/unit/client/: README.md  test_client_state_machine.cpp  test_configuration_accumulation.cpp  test_error_callback.cpp  test_reconnect_backoff.cpp
tests/unit/fixtures/: README.md  common_test_helpers.h  mock_socket.h  protobuf_helpers.h
tests/unit/parsing/: README.md  test_byte_order.cpp  test_configuration_parsing.cpp  test_frame_parsing.cpp  test_state_transitions.cpp
tests/unit/protocol/: README.md  test_message_type_discrimination.cpp  test_payload_size_limits.cpp  test_protobuf_serialization.cpp  test_protobuf_validation.cpp
tests/unit/smoke/: README.md  test_smoke_construction.cpp  test_smoke_enums.cpp  test_smoke_fixtures.cpp  test_smoke_linkage.cpp
